--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ margin: 198px 0px 15px 15px;
 }
 </style>
 </head>
-<body>
+<body background="s/car.jpg">
 <h1 style="text-align:center; 
 font-size:100px; color:#999999">Porsche Cars</h1>
 <ul>
